--- a/styles/index.css
+++ b/styles/index.css
@@ -1,13 +1,16 @@
 :root{
     --fastTrans: all .9s ease;
     --mediumTrans: all 1s ease;
-    --slowTrans: all 2s ease;
+    --slowTrans: all 2s linear;
+   --shadow-1: 2px 5px 12px rgba(216, 216, 216, 0.5);
+
 }
 body{
     /* margin: 0; */
     padding: 0;
     background: aliceblue;
     margin-bottom: 10000px;
+    overflow-x: hidden;
 }
 
 /* nav */
@@ -17,6 +20,7 @@ body{
     align-items: center;
     transition: var(--mediumTrans);
     /* padding: 2px ; */
+    padding: 0px 20px 0px;
 }
 
 .logo{
@@ -45,7 +49,7 @@ body{
     left: 0;
     right: 0;
     background-color: rgb(255, 255, 255);
-    box-shadow: 2px 5px 12px rgba(216, 216, 216, 0.5);
+    box-shadow:var(--shadow-1);
     padding: 2px 20px 0px;
     display: flex;
     justify-content: space-between;
@@ -56,11 +60,25 @@ body{
     cursor: pointer;
 }
 .bar{
-    width: 27px;
-    height: 3.5px;
-    border-radius: 500px;
+    width: 29px;
+    height: calc(3px + 0.5px);
+    border-radius: 50px;
     background-color: #000;
     margin-top: 4px;
+}
+.three{
+    width: 20px;
+}
+.two{
+    width: 23px;
+}
+.sm-one{
+    transform: rotate(45deg)  translateX(6px);
+    background-color: rgb(176, 9, 9);
+}
+.sm-three{
+    transform: rotate(-45deg) translateX(6px);
+    background-color: rgb(176, 9, 9);
 }
 /* responsiveness */
 @media (max-width:800px) {
@@ -71,8 +89,33 @@ body{
         display: block;
     }
 }
-
+.sm-pages-container{
+    transform: translate(-100%);
+    background-color: white;
+    transition: var(--mediumTrans);
+    box-shadow:var(--shadow-1);
+    position: fixed;
+    inset: 0% 3% 0 0 ;
+    padding: 20px;
+}
+.show-nav{
+    transform: translate(0%);
+    transition: var(--mediumTrans);
+}
+.sm-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.sm-pages-container{
+    padding: 0px 30px 0px;
+}
+.sm-pages{
+    margin-top: 7px;
+}
 /* end  of nav */
+
+
 .about-label{
     background-image: url("../images/filename.jpg");
     padding: 50px;
