--- a/styles/index.css
+++ b/styles/index.css
@@ -3,12 +3,13 @@
     --mediumTrans: all 1s ease;
     --slowTrans: all 2s linear;
    --shadow-1: 2px 5px 12px rgba(216, 216, 216, 0.5);
+   --shadow-2: 2px 3px 9px rgba(235, 232, 232, 0.5);
 
 }
 body{
     /* margin: 0; */
     padding: 0;
-    background: aliceblue;
+    background: rgb(242, 242, 249);
     margin-bottom: 10000px;
     overflow-x: hidden;
 }
@@ -19,28 +20,29 @@ body{
     justify-content: space-between;
     align-items: center;
     transition: var(--mediumTrans);
-    /* padding: 2px ; */
-    padding: 0px 20px 0px;
+    margin-left: 20px;
+    margin-right:20px;
 }
 
 .logo{
-    font-size: 29px;
-    font-weight: 900;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 27px;
+    font-weight: 600;
+    font-family: Arial, Helvetica, sans-serif;
 }
-.pages-container{
+.pages-container ul{
    display: flex;
    align-items: center;
 }
 .pages{
-    margin-right: 3px;
+    margin-left: 6px;
+    list-style: none;
 }
 .pages a{
     text-decoration: none;
-    font-size: 15px;
-    letter-spacing: 1px;
-   color: gray;
-   font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    letter-spacing: 1.5px;
+    color: #1f1f1f;
+   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .fixed-nav{
@@ -50,28 +52,31 @@ body{
     right: 0;
     background-color: rgb(255, 255, 255);
     box-shadow:var(--shadow-1);
-    padding: 2px 20px 0px;
+    margin: 0;
+    padding:0px 20px;
     display: flex;
     justify-content: space-between;
     transition: var(--mediumTrans);
+    overflow-x: hidden;
+    z-index: 30;
+    /* opacity: 0.9; */
 }
 .bar-container{
     display: none;
     cursor: pointer;
+    border: 1px solid gray;
+    border-radius: 2px;
+    padding: 1px 5px 5px 5px;
 }
 .bar{
-    width: 29px;
-    height: calc(3px + 0.5px);
+    width: 25px;
+    height: calc(2px + 1px);
     border-radius: 50px;
-    background-color: #000;
+    background-color: #181717;
     margin-top: 4px;
 }
-.three{
-    width: 20px;
-}
-.two{
-    width: 23px;
-}
+
+
 .sm-one{
     transform: rotate(45deg)  translateX(6px);
     background-color: rgb(176, 9, 9);
@@ -79,15 +84,6 @@ body{
 .sm-three{
     transform: rotate(-45deg) translateX(6px);
     background-color: rgb(176, 9, 9);
-}
-/* responsiveness */
-@media (max-width:800px) {
-    .pages-container{
-        display: none;
-    }
-    .bar-container{
-        display: block;
-    }
 }
 .sm-pages-container{
     transform: translate(-100%);
@@ -97,6 +93,9 @@ body{
     position: fixed;
     inset: 0% 3% 0 0 ;
     padding: 20px;
+    display: none;
+    padding: 0px 30px 0px;
+    z-index: 50;
 }
 .show-nav{
     transform: translate(0%);
@@ -107,29 +106,127 @@ body{
     justify-content: space-between;
     align-items: center;
 }
-.sm-pages-container{
-    padding: 0px 30px 0px;
-}
 .sm-pages{
-    margin-top: 7px;
+    margin-top: 10px;
 }
+.sm-pages a{
+    margin-bottom: 15px;
+}
+a:hover{
+    color: brown;
+    transition: var(--mediumTrans);
+}
+
 /* end  of nav */
 
-
+/* About styles begins here */
 .about-label{
-    background-image: url("../images/filename.jpg");
-    padding: 50px;
-    object-position: center;
-    object-fit: cover;
-    background-repeat: repeat;
-    font-size: 23px;
-    color: aliceblue;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-weight: 800;
-    cursor: pointer;
-    transition: var(--slowTrans);
+   display: flex;
+   justify-content: center;
 }
-.about-label:hover{
-    text-decoration: underline;
-    transition: var(--mediumTrans);
+.about-text{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 27px;
+    font-weight: 700;
+    color: rgb(45, 44, 44);
+    letter-spacing: .6px;
+}
+.underline{
+    width: 150px;
+    height: 3px;
+    background-color: brown;
+    margin-top: -15px;
+}
+.about-review,.tabs-content h2{
+    margin: 30px;
+    font-size: 14px;
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    letter-spacing: 1px;
+    font-weight: 300;
+    line-height: 30px;
+}
+.about-image{
+    width: 100%;
+    border-radius: 4px;
+    /* height: 200px; */
+}
+.about-tab-section{
+    display: flex;
+    gap: 23px;
+    place-content: center;
+    justify-content: center;
+    padding:25px;
+    margin-top: 70px;
+    border-radius: 10px;
+    /* box-shadow: var(--shadow-1); */
+}
+
+.tabs-content{
+    margin-top: 30px;
+}
+.tabs-content h2{
+    margin: 0%;
+    text-align: left;
+    line-height: 24px;
+    font-size: 15px;
+    color: rgb(52, 51, 51);
+    font-family: Arial, Helvetica, sans-serif;
+    word-wrap: break-word;
+}
+.about-tab-btn-container button{
+    background: none;
+    border: none;
+    color: rgb(45, 44, 44);
+    font-size: 16px;
+    letter-spacing: .7px;
+    font-weight: 700;
+    cursor: pointer;
+}
+.about-tab-container{
+    z-index: 0;
+    margin: 30px;
+}
+
+.about-gallery-label{
+    text-align: center;
+    padding-top: 40px;
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 2px;
+    color: #1f1f1f;
+}
+.slider-container{
+    width: 60%;
+    height: 400px;
+    /* border: 1px solid gray; */
+    margin-bottom: 30px;
+    position: relative;
+}
+.slide-image{
+    position: absolute;
+}
+
+/* responsiveness */
+@media (max-width:800px) {
+    .pages-container{
+        display: none;
+    }
+    .logo{
+        font-size: 24px;
+    }
+    .bar-container{
+        display: block;
+    }
+    .sm-pages-container{
+        display: block;
+    }
+    .about-tab-section{
+        display: block;
+    }
+    .slider-container{
+        width: 90%;
+        height: 300px;
+    }
 }
