--- a/styles/index.css
+++ b/styles/index.css
@@ -7,10 +7,9 @@
 
 }
 body{
-    /* margin: 0; */
+    margin: 0;
     padding: 0;
-    background: rgb(242, 242, 249);
-    margin-bottom: 10000px;
+    background: #f1f1f9;
     overflow-x: hidden;
 }
 
@@ -150,8 +149,10 @@ a:hover{
 .about-image{
     width: 100%;
     border-radius: 4px;
-    /* height: 200px; */
+    height: 100%;
+
 }
+
 .about-tab-section{
     display: flex;
     gap: 23px;
@@ -160,9 +161,30 @@ a:hover{
     padding:25px;
     margin-top: 70px;
     border-radius: 10px;
-    /* box-shadow: var(--shadow-1); */
 }
 
+.auth-btn,.search-btn,.search-btn:hover{
+    text-decoration: none;
+    color: aliceblue;
+    background-color: #181717;
+    padding: 9px 19px;
+    letter-spacing: .5px;
+    font-weight: 600;
+    border-radius: 4px;
+    transition: var(--mediumTrans);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.auth-btn:hover,.search-btn{
+    border: 1px solid #131313;
+    color: #131313;
+    background-color: transparent;
+}
+.search-btn{
+    font-size: 15px;
+    padding: 9px 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
+}
 .tabs-content{
     margin-top: 30px;
 }
@@ -201,11 +223,75 @@ a:hover{
     width: 60%;
     height: 400px;
     /* border: 1px solid gray; */
+    /* display: flex; */
     margin-bottom: 30px;
     position: relative;
 }
 .slide-image{
     position: absolute;
+}
+.slider-btn button{
+    position: absolute;
+    top: 50%;
+}
+.slider-btn .prev{
+    left: 0;  
+}
+.slider-btn .next{
+    right: 0;  
+}
+
+
+.about-faqs-label{
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: #1f1f1f;
+    letter-spacing: 1px;
+}
+.about-faqs-container{
+    width: 65%;
+}
+.about-faqs{
+    margin-top: 14px;
+    /* border: 1px solid #1f1f1f; */
+
+}
+.about-faqs p,.about-faqs h2{
+    border: 1px solid #1f1f1f;
+    padding: 10px;
+}
+.answer{
+    margin-top: -17px;
+    font-size: 14px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    line-height: 22px;
+    color: rgb(34, 34, 34);
+    display: none;
+    letter-spacing: .5px;
+}
+
+.about-faqs h2{
+    line-height: 24px;
+    font-size: 15px;
+    color: rgb(241, 249, 255);
+    letter-spacing: .4px;
+    font-weight: 700;
+    background: #131313;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 2px;
+    cursor: pointer;
+    user-select: none;
+}
+
+footer{
+    background-color: #131313;
+    padding: 20px;
+    text-align: center;
+    margin-top: 30px;
+    color: aliceblue;
+    font-family: arial,Helvetica;
+    font-weight: 700;
+    margin-top: -5px;
 }
 
 /* responsiveness */
@@ -229,4 +315,30 @@ a:hover{
         width: 90%;
         height: 300px;
     }
+    .about-tab-container{
+        margin: 10px;
+    }
+    .tabs-content h2{
+        font-size: 13px;
+    }
+    .about-faqs-label{
+        font-size: 22px;
+        letter-spacing: .5px;
+    }
+    .about-faqs-container{
+        width: 94%;
+    }
+    .about-faqs h2{
+        font-size: 12px;
+       font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+       letter-spacing: -.5px;
+    }
+    .about-faqs p{
+        font-size: 11px;
+    }
+ 
+}
+
+.show-answers{
+    display: block;
 }
