--- a/styles/index.css
+++ b/styles/index.css
@@ -57,7 +57,7 @@ body{
     justify-content: space-between;
     transition: var(--mediumTrans);
     overflow-x: hidden;
-    z-index: 30;
+    z-index: 100;
     /* opacity: 0.9; */
 }
 .bar-container{
@@ -209,8 +209,20 @@ a:hover{
 .about-tab-container{
     z-index: 0;
     margin: 30px;
+    position: relative;
 }
+.video-container{
+    position: absolute;
+    /* top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    bottom: 0;
+    height: 100%; */
 
+    z-index: 30;
+    display: none;
+}
 .about-gallery-label{
     text-align: center;
     padding-top: 40px;
@@ -222,13 +234,15 @@ a:hover{
 .slider-container{
     width: 60%;
     height: 400px;
-    /* border: 1px solid gray; */
-    /* display: flex; */
-    margin-bottom: 30px;
     position: relative;
+    margin-bottom: 30px;
+ 
+    object-fit: cover;
+    object-position: center;
 }
 .slide-image{
     position: absolute;
+    /* left: -200%; */
 }
 .slider-btn button,.play-icon{
     position: absolute;
@@ -236,10 +250,16 @@ a:hover{
     border: none;
     height: 50px;
     cursor: pointer;
+    /* padding: 10px; */
 }
 .play-icon{
     z-index: 20;
-    transform: translate(50%,50%);
+   left: 50%;
+   background-color: #131313;
+   margin-top: -20px;
+   border-radius: 50%;
+   padding: 7px;
+   /* width: 10px; */
 }
 .slider-btn .prev{
     left: 0;  
@@ -247,13 +267,15 @@ a:hover{
 .slider-btn .next{
     right: 0;  
 }
-.slider-radio-container{
-    display: flex;
-    place-content: center;
-    margin-top: -17px;
-    cursor: pointer;
-}
 
+
+.close-video{
+    display: none;
+    z-index: 70; 
+    background-color: blue;
+    position: absolute;
+    right: 0;
+}
 
 .about-faqs-label{
     text-align: center;
@@ -266,12 +288,9 @@ a:hover{
 }
 .about-faqs{
     margin-top: 14px;
-    /* border: 1px solid #1f1f1f; */
-
 }
 .about-faqs p,.about-faqs h2{
     border: 1px solid #1f1f1f;
-    padding: 10px;
 }
 .answer{
     margin-top: -17px;
@@ -281,9 +300,10 @@ a:hover{
     color: rgb(34, 34, 34);
     display: none;
     letter-spacing: .5px;
+    padding: 10px;
 }
 
-.about-faqs h2{
+.faqs{
     line-height: 24px;
     font-size: 15px;
     color: rgb(241, 249, 255);
@@ -294,6 +314,7 @@ a:hover{
     border-radius: 2px;
     cursor: pointer;
     user-select: none;
+    padding: 20px;
 }
 
 footer{
@@ -306,6 +327,7 @@ footer{
     font-weight: 700;
     margin-top: -5px;
 }
+
 
 /* responsiveness */
 @media (max-width:800px) {
@@ -343,13 +365,30 @@ footer{
     }
     .about-faqs h2{
         font-size: 12px;
-       font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-       letter-spacing: -.5px;
+        padding: 15px;
+       /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
+       /* letter-spacing: -.5px; */
     }
     .about-faqs p{
         font-size: 11px;
     }
- 
+    .slider-btn button{
+        height: 40px;
+    }
+    .play-icon{
+        background: #131313;
+        border-radius: 0%;
+        width: 20px;
+        height: 15px;
+        left: 3%;
+        top: 13%;
+    }
+}
+
+@media (max-width:400px) {
+    .slider-container{
+        height: 200px;
+    }
 }
 
 .show-answers{
