--- a/styles/index.css
+++ b/styles/index.css
@@ -94,7 +94,7 @@ body{
     padding: 20px;
     display: none;
     padding: 0px 30px 0px;
-    z-index: 50;
+    z-index: 150;
 }
 .show-nav{
     transform: translate(0%);
@@ -219,7 +219,7 @@ a:hover{
     width: 100%;
     bottom: 0;
     height: 100%; */
-
+  
     z-index: 30;
     display: none;
 }
@@ -272,9 +272,12 @@ a:hover{
 .close-video{
     display: none;
     z-index: 70; 
-    background-color: blue;
     position: absolute;
+    background-color: white;
     right: 0;
+    cursor: pointer;
+    /* height: 5px; */
+    /* border-radius: 50%; */
 }
 
 .about-faqs-label{
@@ -383,6 +386,11 @@ footer{
         left: 3%;
         top: 13%;
     }
+    /* .video-container{
+        background-color: #fff;
+        box-shadow: var(--shadow-1);
+        padding: 70px;
+    } */
 }
 
 @media (max-width:400px) {
