--- a/styles/index.css
+++ b/styles/index.css
@@ -397,6 +397,9 @@ body{
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 600;
 }
+.filter-buttons{
+  display:flex;
+  justify-content: center;}
 .filter-btn{
   background-color: transparent;
   border: none;
@@ -515,6 +518,8 @@ hr{
     margin:1rem;
     
   }
+  .filter-buttons{
+    justify-content:space-between;}
   .footer-content-container {
     display: block;
   }
